Temp Fix for terminal overflow/scroll

--- a/frontend/src/components/playground/PlayGround.scss
+++ b/frontend/src/components/playground/PlayGround.scss
@@ -1,7 +1,3 @@
-.playground {
-    overflow: hidden;
-}
-
 .tab_mine {
     box-shadow: none !important;
 }
